--- a/public/src/style.css
+++ b/public/src/style.css
@@ -1,6 +1,3 @@
-html {
-  font-size: 112%;
-}
 body {
   box-sizing: border-box;
   margin: 0;
@@ -111,8 +108,17 @@ a,
 .pg-about,
 .pg-log,
 .pg-board {
-  max-width: 420px;
+  max-width: 450px;
   text-align: left;
+}
+.pg-board .entry {
+  position: relative;
+  padding-left: 2.5em;
+  margin-bottom: 0.15em;
+}
+.pg-board .rank {
+  position: absolute;
+  left: 0;
 }
 .pg-about p,
 .pg-board p {
